@@ -11,6 +11,8 @@ dh-python (4.20201104) UNRELEASED; urgency=medium
     python-is-python2, thanks Stephen Kitt.
   * Remove build path from RECORD files, thanks Philip Rinn (closes: 969352)
   * Add integration test coverage for pybuild and flit.
+  * flit: Remove direct_url.json from .dist-info, not reproducible and
+    doesn't contain any useful information.
 
  -- Piotr Ożarowski <piotr@debian.org>  Wed, 04 Nov 2020 11:46:16 +0100
 
